data/derived/comb/progs/unify/prog4195.ml.out
Characters 68-75:
  List.hd xs + sumList List.tl xs
                       ^^^^^^^
Error: This expression has type 'a list -> 'a list
       but an expression was expected of type int list
